--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,14 +1,61 @@
-.para {
-    font-size: 1.5em
-    line height 1.5em;
+body {
+    margin: 0;
+}
+/* Header styles */
+nav {
+   
+    padding: 20px;
+    text-align: center;
+}
+nav, footer p {
+    /* background-color: steelblue; */
 }
 a {
-    background-color: steelblue;
-    font-size: 3em;
-    color: white
-    padding 10px;
+    margin: 40px;
+    font-size: 2em;
+    color: white;
+    padding: 20px;
+    text-decoration: none;
+    
 }
-#active{
+#active, a:hover {
     background-color: white;
     color: steelblue;
 }
+
+/* Main Styles */
+h1 {
+    color: steelblue;
+    text-align: center;
+    margin: 60px 0 10px 0;
+}
+img {
+    width: 80%;
+    border: 4px solid steelblue;
+    margin: 0 auto;
+    display: block;
+}
+.para {
+    font-size: 1.75em;
+    line-height: 1.5em;
+    padding: 10px;
+    width: 80%;
+    margin: 20px auto;
+    
+}
+p {
+    text-align: center;
+}
+/* Footer */
+
+footer p {
+    font-size: 1.25em;
+    color: white;
+    padding: 20px;
+    
+}
+
+footer, nav {
+    background-color: steelblue;
+}
+
