--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -1,3 +1,21 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Karla:wght@300&family=Merriweather:ital,wght@1,700&display=swap');
+:root{
+    --heading-font: "Merriweather";
+    --paragraph-font: "Karla", Helvetica, sans-serif;
+
+}
+body {
+    margin:0;
+    padding:0;
+}
+#logo_link{
+    padding-top: 5px;
+}   
+
+h2{
+    margin:0;
+}
 #content{
     max-width: 1600px;
     margin:0 auto;
@@ -5,32 +23,80 @@
 }
 header{
     background-color: #7cabcc;
+    padding: 35px;
+    font-size: 18px;
 }
 nav a:hover{
     text-align: center;
     color:black;
     background-color: #ded8ae;
     text-decoration: none;
+    padding:35px;
 }
 .logo{
     width:80px;
 }
-
+/* Just Below Header*/
 .icon{
     width: 80px;
 }
 #hero-box{
     text-align: center;
 }
+.home-title{
+    font-size: 2em;
+    margin-top: 20px;
+}
 #hero-msg h1{
     text-align: center;
 }
+
 #hero-msg h4{
     text-align: center;
 }
 .button-box{
     text-align: center;
 }
+.book{
+    text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius:5px;
+}
+.join{
+    text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius:5px;
+}
+.msg{
+    padding:35px;
+}
+.msg p{
+    font-size: .8em;
+    line-height: 1.5em;
+    padding-bottom:15px;
+}
+.card-img{
+    border: 10px solid #DED8AE;
+}
+main section img{
+    box-sizing: border-box;
+}
+.rivers-card{
+    margin: 200px 0;
+} 
+.camping-card{
+    margin: 200px 0;
+} 
+.rapids-card{
+    margin: 200px 0;
+}   
+
+/*  END of Main Section*/
+
 .home-grid{
     text-align: center;
 
@@ -41,6 +107,8 @@ nav a:hover{
 }
 footer{
     text-decoration: none;
+    padding:25px 50px;
+    margin-top: 200px;
 }
 footer p{
     font-size: 1.2em;
@@ -48,9 +116,6 @@ footer p{
 footer p a:hover{
     text-decoration: underline;
 }
-.book{
-    text-decoration: none;
-}
-.join{
-    text-decoration: none;
+footer .social{
+    padding-top: 15px;
 }
