--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -11,6 +11,8 @@ body {
 }
 #logo_link{
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }   
 
 h2{
@@ -19,19 +21,26 @@ h2{
 #content{
     max-width: 1600px;
     margin:0 auto;
-    background-color: #d9c2a3;
+    /*background-color: #d9c2a3;*/
 }
 header{
-    background-color: #7cabcc;
-    padding: 35px;
+    background-color: rgba(124, 171, 204, .5);
+    padding: 20px;
     font-size: 18px;
+    display: grid;
+    grid-template-columns: 150px auto;
+}
+nav{
+    display: flex;
+    justify-content: space-around;
 }
 nav a:hover{
     text-align: center;
     color:black;
     background-color: #ded8ae;
     text-decoration: none;
-    padding:35px;
+    padding:15px;
+
 }
 .logo{
     width:80px;
@@ -40,12 +49,29 @@ nav a:hover{
 .icon{
     width: 80px;
 }
+#hero{
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top:-100px;
+}
 #hero-box{
+    grid-column: 1/4;
+    grid-row: 1/3;
     text-align: center;
+    z-index: -1;
+}
+#hero-img{
+    max-width: 1920px;
+    max-height: 1080px;
 }
 .home-title{
     font-size: 2em;
     margin-top: 20px;
+}
+#hero-msg{
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
 }
 #hero-msg h1{
     text-align: center;
@@ -53,6 +79,7 @@ nav a:hover{
 
 #hero-msg h4{
     text-align: center;
+    color: white;
 }
 .button-box{
     text-align: center;
@@ -71,8 +98,21 @@ nav a:hover{
     margin-top: 50px;
     border-radius:5px;
 }
+#background{
+    background-color: #DED8AE;
+    grid-column: 1/11;
+    grid-row: 4/9;
+}
 .msg{
     padding:35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px;
+}
+.mountains{
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px;
 }
 .msg p{
     font-size: .8em;
@@ -81,24 +121,42 @@ nav a:hover{
 }
 .card-img{
     border: 10px solid #DED8AE;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px;
+}
+.card-img:hover{
+    opacity: .6;
+    transform: scale(1.1);
 }
 main section img{
     box-sizing: border-box;
 }
 .rivers-card{
     margin: 200px 0;
+    grid-column: 2/4;
+    grid-row: 2/3;
 } 
 .camping-card{
     margin: 200px 0;
+    grid-column: 5/7;
+    grid-row: 2/3;
 } 
 .rapids-card{
     margin: 200px 0;
+    grid-column: 8/10;
+    grid-row: 2/3;
 }   
 
-/*  END of Main Section*/
+
+/*   Main Section*/
 
 .home-grid{
     text-align: center;
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+}
+.card-img, .mountains{
+    width: 100%;
 
 }
 
@@ -109,6 +167,9 @@ footer{
     text-decoration: none;
     padding:25px 50px;
     margin-top: 200px;
+    display:flex;
+    justify-content: space-around;
+    align-items: center;
 }
 footer p{
     font-size: 1.2em;
@@ -118,4 +179,45 @@ footer p a:hover{
 }
 footer .social{
     padding-top: 15px;
+}
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
