--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -34,7 +34,6 @@ header{
 nav{
     display: flex;
     justify-content: space-around;
-    text-decoration: none;
 }
 nav a:hover{
     text-align: center;
@@ -44,8 +43,8 @@ nav a:hover{
     padding:15px;
 
 }
-.logo{
-    width:80px;
+/*.logo{
+
 }
 /* Just Below Header*/
 .icon{
