--- a/tylers_takes/styles/site-plan.css
+++ b/tylers_takes/styles/site-plan.css
@@ -59,6 +59,10 @@ header {
   color: var(--headline-color-on-color);
   background-color: var(--paragraph-background-color);
 }
+.logo-link{
+  max-width: 127px;
+  max-height: 100px;
+}
 header > h1, header > h2 {
   color: var(--headline-color-on-color);
 }
