--- a/tylers_takes/styles/index.css
+++ b/tylers_takes/styles/index.css
@@ -29,38 +29,56 @@ Fonts are separated by a | */
 #content{
     background-color: #e91e26;
 }
+body{
+  margin:0;
+  padding: 0;
+}
 /* HEADER */
 header {
   padding: 1em;
   text-align: center;
   color: var(--headline-color-on-color);
   background-color: var(--paragraph-background-color);
+  border-radius: 15px;
 }
-.logo-link{
-  max-width: 127px;
-  max-height: 100px;
+nav {
+  background-color: var(--nav-background-color);
+  /*line-height: 3em;*/
+  text-align: center;
+  font-size: 1.5em;
+  border-radius: 15px;
+  display: flex;
+  justify-content: space-around;
+  text-decoration: none;
+  vertical-align: bottom;
+  max-height: 200px;
+  display: grid;
+  grid-template-columns: repeat(3, 33%);
+}
+#logo-link{ 
+  grid-column: 1/2;
+  justify-self: center;
+  align-self: center;
+}
+.plan{
+  grid-column: 2/3;
+  justify-self: center;
+  align-self: center;
+}
+.watch{
+  grid-column: 3/4;
+  justify-self: center;
+  align-self: center;
 }
 header > h1, header > h2 {
   color: var(--headline-color-on-color);
 }
-nav {
-  background-color: var(--nav-background-color);
-  line-height: 3em;
-  text-align: center;
-  font-size: 1.5em;
-}
-nav{
-  display: flex;
-  justify-content: space-around;
-  text-decoration: none;
 
-}
 nav a {
-  padding:1em;
+  /*padding:1em;*/
   min-width: 120px;
   text-decoration: none;
-  padding: 10px;
-
+  justify-self: center;
 }
 nav a:link, nav a:visited {
   color: var(--nav-link-color);
@@ -149,4 +167,28 @@ nav a:hover {
 }
 #wandavision a{
   text-decoration: none;
+}
+/*FOOTER*/
+footer{
+  border: 5px;
+  border-top: 20px #050404;
+  display: grid;
+  grid-template-columns: 245px 1fr 64px 64px;
+  grid-template-rows: 64px 64px;
+  grid-column-gap: 5px;
+  grid-row-gap: 5px;
+}
+.copy{
+  grid-template-columns: 1/2;
+  grid-row: 1/2;
+  max-width: 245px;
+}
+.recommend{
+  max-width: 245px;
+  grid-column: 1/2;
+  grid-row: 2/3;
+  align-self: center;
+}
+#pics{
+  grid-area: 1/3/3/5;
 }
