--- a/tylers_takes/styles/index.css
+++ b/tylers_takes/styles/index.css
@@ -169,13 +169,17 @@ nav a:hover {
   text-decoration: none;
 }
 footer{
-  border: 5px;
-  border-top: 20px #050404;
+  border-top: 2px solid #050404;
   display: grid;
+  padding-top: 6px;
   grid-template-columns: 245px 1fr 64px 64px;
   grid-template-rows: 64px 64px;
   grid-column-gap: 5px;
   grid-row-gap: 5px;
+}
+.line{
+  border: 20px #050404;
+
 }
 .copy{
   grid-template-columns: 1/2;
