--- a/tylers_takes/styles/index.css
+++ b/tylers_takes/styles/index.css
@@ -172,7 +172,7 @@ footer{
   border-top: 2px solid #050404;
   display: grid;
   padding-top: 6px;
-  grid-template-columns: 245px 1fr 64px 64px;
+  grid-template-columns: 255px 1fr 64px 64px;
   grid-template-rows: 64px 64px;
   grid-column-gap: 5px;
   grid-row-gap: 5px;
@@ -182,15 +182,17 @@ footer{
 
 }
 .copy{
-  grid-template-columns: 1/2;
+  grid-column: 1/2;
   grid-row: 1/2;
   max-width: 245px;
+  padding-left: 10px;
 }
 .recommend{
   max-width: 245px;
   grid-column: 1/2;
   grid-row: 2/3;
   align-self: center;
+  padding-left: 10px;
 }
 #pics{
   grid-area: 1/3/3/5;
