--- a/tylers_takes/styles/index.css
+++ b/tylers_takes/styles/index.css
@@ -53,14 +53,17 @@ nav {
   vertical-align: bottom;
   max-height: 200px;
   display: grid;
-  grid-template-columns: repeat(3, 33%);
+  grid-template-columns: repeat(4, 25%);
 }
 #logo-link{ 
   grid-column: 1/2;
   justify-self: center;
   align-self: center;
 }
-.plan{
+.logo{
+  padding-top: 5px;
+}
+.index{
   grid-column: 2/3;
   justify-self: center;
   align-self: center;
@@ -70,6 +73,12 @@ nav {
   justify-self: center;
   align-self: center;
 }
+.plan{
+  grid-column: 4/5;
+  justify-self: center;
+  align-self: center;
+}
+
 header > h1, header > h2 {
   color: var(--headline-color-on-color);
 }
@@ -91,6 +100,7 @@ nav a:hover {
 /*BODY*/
 .takes{
     text-align: center;
+    padding-top: 25px;
 }
 #show_takes{
   display: grid;
@@ -98,6 +108,8 @@ nav a:hover {
   grid-column-gap: 20px;
   justify-items: center;
   align-items: center;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 
 #aot{
